fix canonical URLS to use trailing slashes

--- a/kc-web-design/src/layouts/Layout.astro
+++ b/kc-web-design/src/layouts/Layout.astro
@@ -11,9 +11,9 @@ const { title, description } = Astro.props;
 // Define the navigation items for the main and social navigation
 const mainNavItems = [
   { href: '/', label: 'About' },
-  { href: '/services', label: 'Web Design Services' },
-  { href: '/portfolio', label: 'Portfolio' },
-  { href: '/contact', label: 'Contact' },
+  { href: '/services/', label: 'Web Design Services' },
+  { href: '/portfolio/', label: 'Portfolio' },
+  { href: '/contact/', label: 'Contact' },
 ];
 
 const socialNavItems = [
