--- a/kc-astro-shared-theme/src/layouts/BaseLayout.astro
+++ b/kc-astro-shared-theme/src/layouts/BaseLayout.astro
@@ -1,5 +1,7 @@
 ---
 import { ClientRouter } from "astro:transitions";
+import { URL } from 'url';
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 export interface Props {
   title: string;
   description?: string;
@@ -29,6 +31,7 @@ const { title, description, classList, gtmId, typescriptId} = Astro.props;
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="canonical" href={canonicalURL} />
     <link rel="manifest" href="/site.webmanifest" />
     {typescriptId && (
       <link rel="preload" href=`https://use.typekit.net/${typescriptId}.css` />
