fix preload of adobe fonts

--- a/kc-astro-shared-theme/src/layouts/BaseLayout.astro
+++ b/kc-astro-shared-theme/src/layouts/BaseLayout.astro
@@ -34,7 +34,7 @@ const { title, description, classList, gtmId, typescriptId} = Astro.props;
     <link rel="canonical" href={canonicalURL} />
     <link rel="manifest" href="/site.webmanifest" />
     {typescriptId && (
-      <link rel="preload" href=`https://use.typekit.net/${typescriptId}.css` />
+      <link rel="preload" as="style" href=`https://use.typekit.net/${typescriptId}.css` />
       <link rel="stylesheet" href=`https://use.typekit.net/${typescriptId}.css` />
     )}
     <meta name="viewport" content="width=device-width" />
