fix more non-cononical links

--- a/kc-web-design/src/pages/index.astro
+++ b/kc-web-design/src/pages/index.astro
@@ -18,7 +18,7 @@ import Layout from '@layouts/Layout.astro';
       <div class="content flow prose">
         <p>I provide end-to-end web design and development services, including custom WordPress solutions, that transform how organizations connect with their audiences.</p>
         <p>I provide friendly guidance from initial concepts through launch and beyond.</p>
-        <IconLink href="/services">View Services</IconLink>
+        <IconLink href="/services/">View Services</IconLink>
       </div>
     </div>
   </Section>
@@ -28,7 +28,7 @@ import Layout from '@layouts/Layout.astro';
       <Heading tag="h2" size="h2">Portfolio</Heading>
       <div class="content flow prose">
         <p>From modernizing government services that serve thousands to helping growing businesses find their digital voice, I've partnered with diverse organizations to create meaningful change through thoughtful design.</p>
-        <IconLink href="/portfolio">View Portfolio</IconLink>
+        <IconLink href="/portfolio/">View Portfolio</IconLink>
       </div>
     </div>
   </Section>
