add GitHub link to footer component

--- a/kc-astro-shared-theme/src/components/Footer.astro
+++ b/kc-astro-shared-theme/src/components/Footer.astro
@@ -8,6 +8,7 @@ const { copyright = `© ${new Date().getFullYear()} All rights reserved`, naviga
 
 const SocialNavItems = [
   { href: 'https://www.linkedin.com/in/ken-chase/', label: 'LinkedIn' },
+  { href: 'https://github.com/kenchase', label: 'GitHub' },
   { href: 'https://www.instagram.com/therealkenchase/', label: 'Instagram' },
   { href: 'https://bsky.app/profile/therealkenchase.bsky.social', label: 'Bluesky' },
 ];
