add portfolio links and update client list

--- a/kc-astro-shared-theme/src/styles/global/_global-styles.scss
+++ b/kc-astro-shared-theme/src/styles/global/_global-styles.scss
@@ -218,6 +218,7 @@ caption {
   margin-block-start: var(--space-s);
 }
 
+a:not([class]),
 a:not([class]):hover {
   text-underline-offset: 0.2lh;
 }
