--- a/kc-astro-shared-theme/src/styles/global/_variables.scss
+++ b/kc-astro-shared-theme/src/styles/global/_variables.scss
@@ -70,7 +70,7 @@ $breakpoint-max: 1350px;
   /* Neutral colours */
   --color-neutral-000: #fff;
   --color-neutral-900: #2f2f2f;
-  --Color-neutral-1000: #000;
+  --color-neutral-1000: #000;
 
   /* Status colours */
   --color-red-500: #ef4444;
