--- a/kc-web-design/src/pages/portfolio.astro
+++ b/kc-web-design/src/pages/portfolio.astro
@@ -9,27 +9,59 @@ import { getCollection } from 'astro:content';
 const portfolioPosts = (await getCollection('portfolioPosts')).sort((a, b) => a.data.title.localeCompare(b.data.title));
 ---
 
-<Layout title="Ken Chase - Web Design and Development Portfolio" description="Ken Chase designs and builds digital products that are elegant, accessible, and easy to manage for government and non-profits.">
-  <Section id="portfolio" classList="kc-region--lg kc-region--inverted-light">
-    <Heading tag="h1" size="h2">About my Portfolio</Heading>
+<Layout
+  title="Ken Chase - Web Design and Development Portfolio"
+  description="Ken Chase designs and builds digital products that are elegant, accessible, and easy to manage for government and non-profits."
+>
+  <Section
+    id="portfolio"
+    classList="kc-region--lg kc-region--inverted-light"
+  >
+    <Heading
+      tag="h1"
+      size="h2"
+      >About my Portfolio</Heading
+    >
     <p>Here's a selection of work that demonstrates the power of collaboration in action. While I'm proud of my contributions to these projects, each one succeeded because of the talented teams behind them. Great products happen when designers, developers, stakeholders, and users work together toward a common vision.</p>
   </Section>
 
-  <Section id="partial-client-list" classList="kc-region--lg" title="Partial Client List">
+  <Section
+    id="partial-client-list"
+    classList="kc-region--lg"
+    title="Partial Client List"
+  >
     <p>I've had the privilege of working with organizations across government, non-profit, and private sectors. Here's a partial list of clients who have trusted me with their digital projects.</p>
     <ul class="column-list-2">
-      {clientList.map((client) => <li> {client.name}</li>)}
+      {
+        clientList.map((client) => (
+          <li>
+            <a
+              href={client.href}
+              target="_blank"
+            >
+              {client.name}
+            </a>
+          </li>
+        ))
+      }
     </ul>
   </Section>
 
-  <Section id="web-design-portfolio" classList="kc-region--lg" title="Select Portfolio Projects">
+  <Section
+    id="web-design-portfolio"
+    classList="kc-region--lg"
+    title="Select Portfolio Projects"
+  >
     <p>These projects showcase my approach to solving real business challenges through thoughtful design and and development. Take a look at the work below to see how I've helped clients across different sectors achieve their goals.</p>
     <div class="flow kc-portfolio-items">
       {
         portfolioPosts.map((post) => (
           <SummaryCard title={post.data.title}>
             <p>{post.data.description}</p>
-            <IconLink href={`/portfolio/${post.id}/`} aria-label={`${post.data.title} portfolio project`}>
+            <IconLink
+              href={`/portfolio/${post.id}/`}
+              aria-label={`${post.data.title} portfolio project`}
+            >
               {post.data.linkLabel}
             </IconLink>
           </SummaryCard>
